# shmup

./: .gitignore  CMakeCache.txt  CMakeLists.txt  ENEMIES.tsx  E_ROLLER.TSX  MAP1.TMX  Main.cpp  Makefile  P_VIPER.TSX  README.md  SDL2Test  T_BGTILES.TSX  \  actors.c  actors.h  build.sh  camera.c  camera.h  cmake_install.cmake  collide.c  collide.h  collisions.c  collisions.h  compile_commands.json  fire.c  fire.h  game.h  graphics.c  graphics.h  lasers.c  lasers.h  main.c  main.c.bak  main.h  makecmake.sh  map.c  map.h  map.plist  map1.tmx  shmup  (+17 more)
.cache/clangd/index/: Main.cpp.A56DD3B11E811764.idx  SAX2.h.7F78AF992F074C98.idx  SDL.h.34A3B514EEAC452E.idx  SDL_assert.h.61BB84D493DD3C46.idx  SDL_atomic.h.D65109D4270B5584.idx  SDL_audio.h.B8C3C08938A431F7.idx  SDL_blendmode.h.DBB671DF242ECB95.idx  SDL_clipboard.h.BBE45C9F23058ADC.idx  SDL_config-x86_64.h.375B35711702517F.idx  SDL_config.h.20C42BC280B26DB3.idx  SDL_cpuinfo.h.772B7DC196CEFADE.idx  SDL_endian.h.781B03999EA8B524.idx  SDL_error.h.94C19D216D581488.idx  SDL_events.h.E0EC494852195014.idx  SDL_filesystem.h.46FB1B3610629F87.idx  SDL_gamecontroller.h.9684224EE0C90BB1.idx  SDL_gesture.h.7591FC3C0D3E5240.idx  SDL_guid.h.C4864FDE01D3CCEB.idx  SDL_haptic.h.EA9BF63C8D15828C.idx  SDL_hidapi.h.35D7939ADB6B4C20.idx  SDL_hints.h.C04AB2DB3B167886.idx  SDL_image.h.66D0E43508FC5399.idx  SDL_joystick.h.CC32E4A1778EEF7A.idx  SDL_keyboard.h.94B9B4E31B50B99D.idx  SDL_keycode.h.8AAC45A4D8CAA040.idx  SDL_loadso.h.24138F5204DEC250.idx  SDL_locale.h.53CA8CCD6B7E5597.idx  SDL_log.h.B5C8DCB40C71D3A7.idx  SDL_main.h.9060E60A12D9D379.idx  SDL_messagebox.h.188731C65B7F2833.idx  SDL_metal.h.1E975D8C6DDA0713.idx  SDL_misc.h.EE08683AFB5E5631.idx  SDL_mouse.h.A1711A0B623468C7.idx  SDL_mutex.h.387C1F6704656FFE.idx  SDL_pixels.h.C8E13E6CF0226CF0.idx  SDL_platform.h.3F4B2EFDCAFB4418.idx  SDL_power.h.DB93F2FE9E0F3433.idx  SDL_quit.h.2C9E27E125DCBA89.idx  SDL_rect.h.51190C1D4A9377A2.idx  SDL_render.h.4A91D8C0CCACD3A8.idx  (+283 more)
.cache/jb/: compilation_graph.txt  index_stats.txt  modules_graph.txt
.cache/jb/symbols/: home_tony__cache_JetBrains_Fleet_language_server_jbclangd_include___stdarg___va_copy.h.riff  (+69 more)
images/: vicviper.png~
